--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>眾。說書</h1>
-							<p class="major">眾。說書 APP 為你統整各種好書！快速聆聽、隨時提升自我，讓你不必再花時間找好書！<br><br>資訊爆炸時代必備，通勤也能快速吸收知識 <br><br>•  多本書籍，任你挑選 <br>•  分類清楚，學習更有效率 <br>•  無限暢聽，專注學習無干擾 <br>•  簡潔介面，搜尋快速 <br><br>免費、無廣告、無訂閱！</p>
+							<h1>InnerIsle: Meditation & Sleep</h1>
+							<p class="major">Find serenity with InnerIsle: free, ad-free meditation for sleep, focus, and calm.<br>Embrace tranquility and enhance well-being today.<br>Your path to peace awaits.<br><br>Download InnerIsle now and begin exploring the myriad benefits of meditation, all centered around cultivating a lasting sense of calm.<br>Your journey to a more serene, mindful, and calm life starts here</p>
 							<ul class="actions stacked">
-								<li><a href="https://apps.apple.com/us/app/id6473086774" class="button big wide smooth-scroll-middle">立即下載</a></li>
+								<li><a href="https://apps.apple.com/us/app/id6477813564" class="button big wide smooth-scroll-middle">Download Now!</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -31,7 +31,7 @@
 						</div>
 					</section>
 
-					<section>
+					<!-- <section>
 					<br><br><br>
 					 <a href="https://www.flaticon.com/free-icons/project" title="project icons">Project icons created by Kiranshastry - Flaticon</a><br>
     				<a href="https://www.flaticon.com/free-icons/work-experiences" title="work experiences icons">Work experiences icons created by mim_studio - Flaticon</a><br>
@@ -39,7 +39,7 @@
     				<a href="https://www.flaticon.com/free-icons/self-growth" title="self growth icons">Self growth icons created by Ayub Irawan - Flaticon</a><br>
     
 
-					</section>
+					</section> -->
 
 				<!-- Two  -->
 					<!-- <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
